--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,3 +1,2 @@
 @import "_mixins/font-face";
-@include font-face("Test", "../fonts/TestRegular/TestRegular");
-@include font-face("Test", "../fonts/TestBold/TestBold", bold);
+@include font-face("BebasNeue", "../fonts/BebasNeue/BebasNeue-Bold", bold);
