--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -19,12 +19,14 @@ body {
 }
 
 .button {
-	padding: 15px 35px;
+	padding: 10px 35px;
 	border: 0;
 	border-radius: 5px;
+	font-family: 'BebasNeue', sans-serif;
 	font-size: 30px;
-	font-weight: 400;
+	font-weight: 700;
 	text-transform: uppercase;
+	cursor: pointer;
 	&--dark {
 		background: #000;
 		color: #ffffff;
@@ -38,12 +40,47 @@ body {
 	}
 }
 
+section {
+	padding-top: 65px;
+	padding-bottom: 65px;
+}
+
+.section-text {
+	font-family: 'Lato', sans-serif;
+	text-transform: uppercase;
+	&__title {
+		font-size: 44px;
+		font-weight: 900;
+		line-height: 1.1em;
+		&--light {
+			color: #fff;
+		}
+		&--dark {
+			color: #000;
+		}
+	}
+	&__subtitle {
+		font-size: 35px;
+		font-weight: 900;
+		line-height: 1.1em;
+		&--light {
+			color: #ffc61a;
+		}
+		&--dark {
+			color: #000;
+		}
+	}
+}
+
 .header {
 	padding-top: 75px;
 	padding-bottom: 430px;
 	font-family: 'Lato', sans-serif;
 	background: url(../img/header-bg.png) no-repeat;
 	background-size: cover;
+	@media only screen and (max-width: $sm) {
+		padding-bottom: 75px;
+	}
 }
 
 .menu {
@@ -101,6 +138,9 @@ body {
 .banner {
 	position: relative;
 	margin-top: 135px;
+	@media only screen and (max-width: $sm) {
+		margin-top: 50px;
+	}
 	&__title {
 		margin-bottom: 30px;
 		font-family: 'Lato', sans-serif;
@@ -117,6 +157,14 @@ body {
 		font-weight: 900;
 		line-height: 3.8rem;
 		color: #fff;
+		@media only screen and (max-width: $md) {
+			font-size: 36px;
+			letter-spacing: 0.1em;
+		}
+		@media only screen and (max-width: $sm) {
+			font-size: 30px;
+			letter-spacing: 0.1em;
+		}
 	}
 	&__domain {
 		margin-bottom: 30px;
@@ -127,10 +175,23 @@ body {
 		letter-spacing: 1.36rem;
 		text-transform: uppercase;
 		color: #fff;
+		@media only screen and (max-width: $md) {
+			letter-spacing: 0.4em;
+		}
+		@media only screen and (max-width: $sm) {
+			font-size: 14px;
+			letter-spacing: 0.4em;
+		}
 	}
 	&__img {
 		position: absolute;
 		top: 260px;
+		@media only screen and (max-width: $md) {
+			width: 90%;
+		}
+		@media only screen and (max-width: $sm) {
+			display: none;
+		}
 	}
 }
 
@@ -141,32 +202,40 @@ body {
 }
 
 .about {
-	flex-basis: 555px;
+	flex-basis: 560px;
 	&__text {
 		font-family: 'Lato', sans-serif;
 		color: #101010;
 	}
 	&__slogan {
-		font-size: 35px;
+		font-size: 32px;
 		font-weight: 900;
 		text-transform: uppercase;
 	}
 	&__title {
+		margin-top: 10px;
 		font-size: 50px;
 		font-weight: 900;
+		line-height: 1.2em;
 		text-transform: uppercase;
+		color: #101010;
 	}
 	&__description {
 		font-size: 18px;
 		font-weight: 400;
+		line-height: 1.3em;
+		color: #101010;
 	}
 	&__button {
-		margin-top: 50px;
+		margin-top: 40px;
 	}
 }
 
 .book {
 	flex-basis: 422px;
+	@media only screen and (max-width: $lg) {
+		margin-top: 50px;
+	}
 	&__title {
 		padding: 25px 35px;
 		background: #000;
@@ -188,14 +257,138 @@ body {
 	}
 	&__inner {
 		margin-top: 40px;
+		@media only screen and (max-width: $sm) {
+			margin-top: 0px;
+		}
 	}
 	&__input {
 		width: 170px;
 		padding-bottom: 15px;
 		border: 0;
 		border-bottom: 3px solid #e4e4e4;
+		@media only screen and (max-width: $sm) {
+			width: 100%;
+			margin-top: 20px;
+		}
+		&--long {
+			width: 100%;
+		}
+	}
+	&__input,
+	&__input::placeholder {
+		font-family: 'Lato', sans-serif;
+		font-size: 20px;
+		font-weight: 700;
+		color: #4b4b4b;
 	}
 	&__button {
 		margin-top: 43px;
+	}
+}
+
+.s-tariffs {
+	@media only screen and (max-width: $sm) {
+		.container {
+			padding-right: 0;
+			padding-left: 0;
+		}
+	}
+}
+
+.tariff-cards {
+	margin-top: 130px;
+	@media only screen and (max-width: $lg) {
+		margin-top: 10px;
+	}
+}
+
+.card {
+	position: relative;
+	width: 360px;
+	padding: 115px 35px 25px 35px;
+	background: #f5f4f2;
+	@media only screen and (max-width: $lg) {
+		margin-top: 150px;
+	}
+	@media only screen and (max-width: $sm) {
+		width: 100%;
+	}
+	&__img {
+		position: absolute;
+		top: -95px;
+		width: 90%;
+		height: auto;
+		img {
+			width: 100%;
+		}
+	}
+	&__text {
+		font-family: 'Lato', sans-serif;
+		color: #000;
+	}
+	&__title {
+		font-size: 30px;
+		font-weight: 900;
+		text-transform: uppercase;
+	}
+	&__description {
+		margin-top: 30px;
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 1.2em;
+		color: #101010;
+	}
+	&__cost {
+		margin-top: 35px;
+		font-size: 44px;
+		font-weight: 900;
+		text-transform: uppercase;
+		color: #ffc61a;
+	}
+	&__button {
+		margin-top: 35px;
+	}
+	&--active {
+		background: #ffc61a;
+		.card__cost {
+			color: #131313;
+		}
+	}
+}
+
+.s-features {
+	background: url(../img/features-bg.jpg) no-repeat;
+	background-size: cover;
+}
+
+.features {
+	margin-top: 80px;
+}
+
+.feature {
+	&__img {
+		width: 80px;
+		height: 80px;
+		margin-right: 30px;
+		border-radius: 50%;
+		background: #ffc61a;
+		@media only screen and (max-width: $sm) {
+			display: none;
+		}
+	}
+	&__text {
+		max-width: 365px;
+		font-family: 'Lato', sans-serif;
+	}
+	&__title {
+		font-size: 25px;
+		font-weight: 700;
+		text-transform: uppercase;
+		color: #ffc61a;
+	}
+	&__description {
+		font-size: 18px;
+		font-weight: 400;
+		color: #fff;
 	}
 }
