--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -196,6 +196,7 @@ section {
 	}
 	&__title {
 		margin-bottom: 30px;
+		text-align: center;
 		font-family: 'Lato', sans-serif;
 		font-size: 32px;
 		font-weight: 900;
@@ -205,6 +206,7 @@ section {
 	}
 	&__telephone {
 		margin-bottom: 30px;
+		text-align: center;
 		font-family: 'Lato', sans-serif;
 		font-size: 68px;
 		font-weight: 900;
@@ -220,6 +222,7 @@ section {
 	}
 	&__domain {
 		margin-bottom: 30px;
+		text-align: center;
 		font-family: 'Montserrat', sans-serif;
 		font-size: 18px;
 		font-weight: 400;
@@ -237,7 +240,11 @@ section {
 	&__img {
 		position: absolute;
 		top: 275px;
+		left: 50%;
+		width: 100%;
+		max-width: 826px;
 		height: auto;
+		transform: translate(-50%, 0%);
 		img {
 			width: 100%;
 		}
@@ -358,6 +365,7 @@ section {
 }
 
 .card {
+	width: 100%;
 	position: relative;
 	width: 360px;
 	padding: 115px 35px 25px 35px;
@@ -371,8 +379,11 @@ section {
 	&__img {
 		position: absolute;
 		top: -90px;
-		width: 85%;
+		left: 50%;
+		width: 100%;
+		max-width: 289px;
 		height: auto;
+		transform: translate(-50%, 0%);
 		img {
 			width: 100%;
 		}
@@ -506,7 +517,6 @@ section {
 				.slick-slide {
 					display: flex;
 					flex-direction: column;
-					//align-items: center;
 					max-width: 580px;
 					p {
 						max-width: 100%;
